# decision-support-system

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
data/: CMakeLists.txt  dss.sqlite  dss2.sqlite  main_window.ui
src/: database_service.cpp  database_service.hpp  decision_table_window.cpp  decision_table_window.hpp  defs.hpp  main.cpp  main_window.cpp  main_window.hpp  solver.cpp  solver.hpp  widget_creator.cpp  widget_creator.hpp
src/data-crawler/: main.cpp
tools/cmake/: CMakeLists.txt  longlp_desired_compile_features.cmake  longlp_desired_compile_options.cmake  longlp_download_conan_cmake_if_not_exist.cmake  longlp_make_exec.cmake  longlp_make_library.cmake  longlp_message.cmake
